--- a/meta-ingrasys/meta-zaius/recipes-phosphor/ipmi/phosphor-ipmi-sensor-inventory%/config.yaml
+++ b/meta-ingrasys/meta-zaius/recipes-phosphor/ipmi/phosphor-ipmi-sensor-inventory%/config.yaml
@@ -186,6 +186,7 @@
   bExp: 0
   unit: xyz.openbmc_project.Sensor.Value.Unit.RPMS
   scale: 0
+  rExp: 0
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
   interfaces:
@@ -213,6 +214,7 @@
   bExp: 0
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   scale: -3
+  rExp: -3
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
   interfaces:
@@ -266,6 +268,7 @@
   bExp: 0
   unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
   scale: -3
+  rExp: -3
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
   interfaces:
