--- a/meta-inspur/meta-on5263m5/conf/machine/on5263m5.conf
+++ b/meta-inspur/meta-on5263m5/conf/machine/on5263m5.conf
@@ -2,6 +2,7 @@ KMACHINE = "aspeed"
 KERNEL_DEVICETREE = "${KMACHINE}-bmc-inspur-${MACHINE}.dtb"
 
 require conf/machine/include/ast2500.inc
+require conf/machine/include/obmc-bsp-common.inc
 require conf/machine/include/inspur.inc
 
 UBOOT_MACHINE = "ast_g5_phy_config"
