--- a/meta-intel/conf/layer.conf
+++ b/meta-intel/conf/layer.conf
@@ -9,3 +9,6 @@ BBFILE_COLLECTIONS += "intel"
 BBFILE_PATTERN_intel = ""
 LAYERVERSION_intel = "1"
 LAYERSERIES_COMPAT_intel = "sumo"
+
+# Provide a variable that points the base of the intel layer.
+INTELBASE = '${@os.path.normpath("${LAYERDIR}/")}'
