--- a/meta-ingrasys/meta-zaius/conf/machine/zaius.conf
+++ b/meta-ingrasys/meta-zaius/conf/machine/zaius.conf
@@ -7,6 +7,7 @@ FLASH_SIZE = "65536"
 
 PREFERRED_PROVIDER_virtual/p9-vcs-workaround = 'vcs-control'
 PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-inventory = "zaius-ipmi-inventory-map-native"
+PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-properties = "zaius-ipmi-fru-properties-native"
 
 require conf/machine/include/ast2500.inc
 require conf/machine/include/obmc-bsp-common.inc
