--- a/meta-inspur/conf/layer.conf
+++ b/meta-inspur/conf/layer.conf
@@ -8,7 +8,7 @@ BBFILES += "${LAYERDIR}/meta-common/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "inspur-layer"
 BBFILE_PATTERN_inspur-layer = ""
 LAYERVERSION_inspur-layer = "1"
-LAYERSERIES_COMPAT_inspur-layer = "sumo"
+LAYERSERIES_COMPAT_inspur-layer = "thud"
 
 INSPURBASE = '${@os.path.normpath("${LAYERDIR}/")}'
 
