wspoon: Configure zone thermal mode properties
Populate the properties on the Control.ThermalMode interface with the
list of supported modes along with setting the default value of the
current mode.

With setting these modes to uppercase, the events must also be updated
to match to effectively load process the event using this property.

Tested:
    Introspected the zone object and verified the values of each
property when fan control initializes the zone.

Requires:
    https://gerrit.openbmc-project.xyz/18474

(From meta-ibm rev: 8e08d602f92301db11e36ededcdd180b703a82b1)

Change-Id: I06cd35957640568d4719489ef17aff7f3d13cd7f
Signed-off-by: Matthew Barth <msbarth@us.ibm.com>
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-ibm/meta-witherspoon/recipes-phosphor/fans/phosphor-fan-control-events-config-native/events.yaml
+++ b/meta-ibm/meta-witherspoon/recipes-phosphor/fans/phosphor-fan-control-events-config-native/events.yaml
@@ -455,7 +455,7 @@ events:
       actions:
           - name: use_alternate_events_on_state
             property:
-                value: Custom
+                value: CUSTOM
                 type: std::string
             defevents:
                 - name: default_floor_boundary
