meta-raspberrypi: refresh thud: d5d92f2cb7..c71d79efc5
Update meta-raspberrypi to thud HEAD.

Andrei Gherzan (2):
      raspberrypi-cm3.conf: Define it as a stand alone machine
      docs/layer-contents.md: raspberrypi-cm3 is a stand alone machine now

Drew Moseley (1):
      linux-raspberrypi: Update to 4.14.85

Hugo Hromic (1):
      docs: improve the contributing section

Khem Raj (8):
      dynamic-layers/qt5-layer: Append to oe-device-extra.pri instead of rewriting
      bpftool: Disable for rpi until kernel is not > 4.14
      packagegroup-meta-oe.bbappend: remove bpftool for rpi
      Add meta-oe to dynamic-layers
      layer.conf: Fix typo for openembedded-layer dynamic layer addition
      bpftool: Move under meta-oe dynamic layer
      qtbase: Get eglfs/kms working with vc4graphics
      userland: Use original name libegl-mesa in rdeps

Marek Belisko (1):
      devtools: Added raspi-gpio

Ming Liu (2):
      rpi-default-providers.inc: use virtual/libgbm instead of libgbm
      userland: do not provide libgl1

Pepijn de Vos (2):
      firmware.inc: Update to 20181211
      linux-raspberrypi: Update to 4.14.87

Ricardo Salveti (1):
      bluez-firmware-rpidistro: update bluez-firmware

Richard Osterloh (1):
      sdcard_image-rpi: Format boot partition as FAT32

Zahari Petkov (2):
      linux-raspberrypi: Update to 4.14.98
      firmware.inc: Update to 20190212

memox_5 (1):
      rpi-config: used printf to escape properly

Change-Id: I36c776929c0ca91f06ab0f9bd93f1e2ce19cdf8b
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-raspberrypi/conf/layer.conf
+++ b/meta-raspberrypi/conf/layer.conf
@@ -25,6 +25,8 @@ BBFILES += "${@' '.join('${LAYERDIR}/dynamic-layers/%s/recipes*/*/*.bb' % layer 
                for layer in BBFILE_COLLECTIONS.split())}"
 
 BBFILES_DYNAMIC += " \
+    openembedded-layer:${LAYERDIR}/dynamic-layers/openembedded-layer/*/*/*.bb \
+    openembedded-layer:${LAYERDIR}/dynamic-layers/openembedded-layer/*/*/*.bbappend \
     qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bb \
     qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bbappend \
 "
