Remove witherspoon prefix from pfault-analysis
Remove the witherspoon prefix from the witherspoon-pfault-analysis based
recipes for applications and service files to avoid confusion when these
are reused by Swift.

Point to latest commit of witherspoon-pfault-analysis.

Requires:
    I4c7275c3b14b3b3724abb98b8d43610df4f9c2a3
    https://gerrit.openbmc-project.xyz/c/openbmc/witherspoon-pfault-analysis/+/19399

(From meta-ibm rev: fe3a464e30811d89cad55aab795523fd6152b5a8)

Change-Id: Ic73d31809794b5033126549044d7e4ff00653118
Signed-off-by: Brandon Wyman <bjwyman@gmail.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/recipes-phosphor/power/witherspoon-pfault-analysis/pseq-monitor-pgood.service
+++ b/meta-ibm/meta-witherspoon/recipes-phosphor/power/witherspoon-pfault-analysis/pseq-monitor-pgood.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Witherspoon Power Sequencer Power-on Monitor
+Description=Power Sequencer Power-on Monitor
 Wants=op-power-start@0.service
 After=op-power-start@0.service
 Wants=power-workarounds@0.service
@@ -9,5 +9,5 @@ ConditionPathExists=!/run/openbmc/chassis@0-on
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/env witherspoon-pseq-monitor -a pgood-monitor -i 5000
-SyslogIdentifier=witherspoon-pseq-monitor
+ExecStart=/usr/bin/env pseq-monitor -a pgood-monitor -i 5000
+SyslogIdentifier=pseq-monitor
