--- a/meta-ibm/meta-witherspoon/recipes-phosphor/power/witherspoon-pfault-analysis/power-supply-monitor@.service
+++ b/meta-ibm/meta-witherspoon/recipes-phosphor/power/witherspoon-pfault-analysis/power-supply-monitor@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Witherspoon Power Supply %I Monitor
+Description=Power Supply %I Monitor
 Wants=mapper-wait@-xyz-openbmc_project-inventory-system-chassis-motherboard-powersupply%i.service
 After=mapper-wait@-xyz-openbmc_project-inventory-system-chassis-motherboard-powersupply%i.service
 Wants=mapper-wait@-org-openbmc-control-power0.service
@@ -8,8 +8,8 @@ ConditionPathExists={envfiledir}/obmc/power-supply-monitor/power-supply-monitor-
 
 [Service]
 EnvironmentFile={envfiledir}/obmc/power-supply-monitor/power-supply-monitor-%i.conf
-ExecStart=/usr/bin/env witherspoon-psu-monitor --path=${{DEVPATH}} --instance=${{INSTANCE}} --inventory=${{INVENTORY}} --num-history-records=${{NUM_HISTORY_RECORDS}} --sync-gpio-path=${{SYNC_GPIO_PATH}} --sync-gpio-num=${{SYNC_GPIO_NUM}}
-SyslogIdentifier=witherspoon-psu-monitor
+ExecStart=/usr/bin/env psu-monitor --path=${{DEVPATH}} --instance=${{INSTANCE}} --inventory=${{INVENTORY}} --num-history-records=${{NUM_HISTORY_RECORDS}} --sync-gpio-path=${{SYNC_GPIO_PATH}} --sync-gpio-num=${{SYNC_GPIO_NUM}}
+SyslogIdentifier=psu-monitor
 
 [Install]
 RequiredBy=multi-user.target
