quanta: update gsj machine configuration
Commit GSJ project configurations.
1. Add configuration for u-boot-evn.
2. Update kernel configuration.
3. Add gsj suffix to some properties.

Tested: Build Quanta GSJ image and load on the GSJ BMC module.
Ensure that BMC boots to console successfully.

(From meta-quanta rev: fc91a4374e2576e940f9c70f34cfe5af9d0aa727)

Change-Id: I2de3b60db65f744bdc1a573efd063b999aa2536e
Signed-off-by: Fran Hsu <Fran.Hsu@quantatw.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-gsj/recipes-kernel/linux/linux-nuvoton/gsj.cfg
+++ b/meta-quanta/meta-gsj/recipes-kernel/linux/linux-nuvoton/gsj.cfg
@@ -46,3 +46,17 @@ CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_CONFIGFS_EEM=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_HID=y
+
+CONFIG_MEDIA_SUPPORT=y
+CONFIG_FORCE_MAX_ZONEORDER=12
+CONFIG_SENSORS_LM25066=y
+CONFIG_I2C_SLAVE=y
+CONFIG_I2C_SLAVE_MQUEUE=y
+CONFIG_NUVOTON_JTAG=y
+CONFIG_EDAC_ATOMIC_SCRUB=y
+CONFIG_EDAC_SUPPORT=y
+CONFIG_EDAC=y
+CONFIG_EDAC_LEGACY_SYSFS=y
+CONFIG_EDAC_DEBUG=y
+CONFIG_EDAC_NPCM7XX=y
+CONFIG_RAS=y
