update upstream subtrees
A number of corequisites exist so squashing these all into one patch.

meta-ingrasys - refresh master bc513127f4..67bcaf389f
meta-hxt - refresh master 86a4df514f..8fe0d38bbb
meta-phosphor - refresh master 06c09d7cce..df6ddae3d2
meta-quanta - refresh master 4f126361a1..53f3025271

Change-Id: I3daeef2a0467d8ea4f1fd1c617e526f8b11258af
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-gsj/conf/machine/gsj.conf
+++ b/meta-quanta/meta-gsj/conf/machine/gsj.conf
@@ -25,3 +25,4 @@ PREFERRED_PROVIDER_virtual/obmc-fan-mgmt = "packagegroup-gsj-apps"
 PREFERRED_PROVIDER_virtual/obmc-flash-mgmt = "packagegroup-gsj-apps"
 PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-inventory = "gsj-ipmi-inventory-map-native"
 PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-read-inventory = "gsj-ipmi-fru-read-inventory-native"
+PREFERRED_PROVIDER_virtual/phosphor-ipmi-sensor-inventory = "gsj-ipmi-sensor-map-native"
