--- a/meta-quanta/meta-gsj/recipes-phosphor/leds/gsj-led-manager-config/led.yaml
+++ b/meta-quanta/meta-gsj/recipes-phosphor/leds/gsj-led-manager-config/led.yaml
@@ -9,35 +9,43 @@ LED_BMC_TRAY_PWRGD:
         Period: 1000
 LED_U2_0_LOCATE:
     LED_U2_0_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_1_LOCATE:
     LED_U2_1_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_2_LOCATE:
     LED_U2_2_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_3_LOCATE:
     LED_U2_3_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_4_LOCATE:
     LED_U2_4_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_5_LOCATE:
     LED_U2_5_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_6_LOCATE:
     LED_U2_6_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_7_LOCATE:
     LED_U2_7_LOCATE:
-        Action: 'On'
+        Action: 'Blink'
+        DutyOn: 50
         Period: 1000
 LED_U2_0_FAULT:
     LED_U2_0_FAULT:
