meta-quanta: gsj: nvme-powerctrl: mutli-user target
Use the multi-user target instead of the openbmc-custom obmc-standby
target for services.

(From meta-quanta rev: c886d1d4b761ee20c7f54a201ce5f74e5537b5fb)

Signed-off-by: Patrick Venture <venture@google.com>
Change-Id: Ie49f53850ed65bf4a71c959fe30bb1e36c41b725
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-gsj/recipes-gsj/quanta-nvme-powerctrl/files/nvme_gpio.service
+++ b/meta-quanta/meta-gsj/recipes-gsj/quanta-nvme-powerctrl/files/nvme_gpio.service
@@ -7,4 +7,4 @@ After=org.openbmc.records.events.service xyz.openbmc_project.nvme.manager.servic
 ExecStart=/usr/bin/init_once.sh
 
 [Install]
-WantedBy=obmc-standby.target
+WantedBy=multi-user.target
