meta-quanta: gsj: add PWM targets for fans
Add a PWM_TARGET variable for each fan that describes which PWM channel
controls that fan.

(From meta-quanta rev: 55f0bad12ec1a677e155db82e9f23678488a9aa0)

Change-Id: Ib4c94ba599017b24b475fcd680e642ad47f36007
Signed-off-by: Benjamin Fair <benjaminfair@google.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-gsj/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/pwm-fan-controller@103000.conf
+++ b/meta-quanta/meta-gsj/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/pwm-fan-controller@103000.conf
@@ -1,5 +1,5 @@
 LABEL_fan1= "Fan0_0_RPM"
-TARGET_fan1= "Fan0_0_RPM"
+PWM_TARGET_fan1= "1"
 WARNHI_fan1= "21000"
 WARNLO_fan1= "250"
 CRITHI_fan1= "23000"
@@ -9,7 +9,7 @@ MAXVALUE_fan1 = "25500"
 EVENT_fan1= "WARNHI,WARNLO,CRITHI,CRITLO"
 
 LABEL_fan2= "Fan0_1_RPM"
-TARGET_fan2= "Fan0_1_RPM"
+PWM_TARGET_fan2= "1"
 WARNHI_fan2= "21000"
 WARNLO_fan2= "250"
 CRITHI_fan2= "23000"
@@ -19,7 +19,7 @@ MAXVALUE_fan2 = "25500"
 EVENT_fan2= "WARNHI,WARNLO,CRITHI,CRITLO"
 
 LABEL_fan3= "Fan1_0_RPM"
-TARGET_fan3= "Fan1_0_RPM"
+PWM_TARGET_fan3= "2"
 WARNHI_fan3= "21000"
 WARNLO_fan3= "250"
 CRITHI_fan3= "23000"
@@ -29,7 +29,7 @@ MAXVALUE_fan3 = "25500"
 EVENT_fan3= "WARNHI,WARNLO,CRITHI,CRITLO"
 
 LABEL_fan4= "Fan1_1_RPM"
-TARGET_fan4= "Fan1_1_RPM"
+PWM_TARGET_fan4= "2"
 WARNHI_fan4= "21000"
 WARNLO_fan4= "250"
 CRITHI_fan4= "23000"
@@ -39,7 +39,7 @@ MAXVALUE_fan4 = "25500"
 EVENT_fan4= "WARNHI,WARNLO,CRITHI,CRITLO"
 
 LABEL_fan5= "Fan2_0_RPM"
-TARGET_fan5= "Fan2_0_RPM"
+PWM_TARGET_fan5= "3"
 WARNHI_fan5= "21000"
 WARNLO_fan5= "250"
 CRITHI_fan5= "23000"
@@ -49,7 +49,7 @@ MAXVALUE_fan5 = "25500"
 EVENT_fan5= "WARNHI,WARNLO,CRITHI,CRITLO"
 
 LABEL_fan6= "Fan2_1_RPM"
-TARGET_fan6= "Fan2_1_RPM"
+PWM_TARGET_fan6= "3"
 WARNHI_fan6= "21000"
 WARNLO_fan6= "250"
 CRITHI_fan6= "23000"
