meta-quanta: gsj: add IPMI PWM sensors
Add a sensor for each fan PWM channel to the IPMI sensor map.

(From meta-quanta rev: 9daae7df1f77542bce03096cd523febe97555402)

Change-Id: I1e142ad3a1596a378e749aa326e6082b4cb84c21
Signed-off-by: Benjamin Fair <benjaminfair@google.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-gsj/recipes-phosphor/ipmi/gsj-ipmi-sensor-map/config.yaml
+++ b/meta-quanta/meta-gsj/recipes-phosphor/ipmi/gsj-ipmi-sensor-map/config.yaml
@@ -365,6 +365,31 @@
           0xFF:
             type: int64_t
 
+0xC0: &fan_pwm
+  sensorType: 0x04
+  path: /xyz/openbmc_project/sensors/fan_tach/Fan0_0_RPM
+  sensorReadingType: 0x01
+  multiplierM: 1
+  offsetB: 0
+  bExp: 0
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  interfaces:
+    xyz.openbmc_project.Control.FanPwm:
+      Target:
+        Offsets:
+          0xFF:
+            type: uint64_t
+
+0xC1:
+  <<: *fan_pwm
+  path: /xyz/openbmc_project/sensors/fan_tach/Fan1_0_RPM
+
+0xC2:
+  <<: *fan_pwm
+  path: /xyz/openbmc_project/sensors/fan_tach/Fan2_0_RPM
+
 0x34:
   entityID: 0x07
   entityInstance: 1
