witherspoon: adjust occ hwmon labels for 5.0 kernel
The upstream 5.0 kernel changed the labels for power sensors. Adjust
the hwmon configuration files to account for this.

(From meta-ibm rev: 222fda96aacb1971094e742e71d6d597985fc927)

Signed-off-by: Eddie James <eajames@linux.ibm.com>
Change-Id: Ibc8921e14b3840959e0793934432ba5615d0b416
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/devices/platform/gpio-fsi/fsi0/slave@00--00/00--00--00--06/sbefifo1-dev0/occ-hwmon.1.conf
+++ b/meta-ibm/meta-witherspoon/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/devices/platform/gpio-fsi/fsi0/slave@00--00/00--00--00--06/sbefifo1-dev0/occ-hwmon.1.conf
@@ -37,21 +37,21 @@ MODE_temp36 = "label"
 MODE_temp37 = "label"
 MODE_temp38 = "label"
 
-MODE_power1 = "function_id"
-MODE_power2 = "function_id"
-MODE_power3 = "function_id"
-MODE_power4 = "function_id"
-MODE_power5 = "function_id"
-MODE_power6 = "function_id"
-MODE_power7 = "function_id"
-MODE_power8 = "function_id"
-MODE_power9 = "function_id"
-MODE_power10 = "function_id"
-MODE_power11 = "function_id"
-MODE_power12 = "function_id"
-MODE_power13 = "function_id"
-MODE_power14 = "function_id"
-MODE_power15 = "function_id"
+MODE_power1 = "label"
+MODE_power2 = "label"
+MODE_power3 = "label"
+MODE_power4 = "label"
+MODE_power5 = "label"
+MODE_power6 = "label"
+MODE_power7 = "label"
+MODE_power8 = "label"
+MODE_power9 = "label"
+MODE_power10 = "label"
+MODE_power11 = "label"
+MODE_power12 = "label"
+MODE_power13 = "label"
+MODE_power14 = "label"
+MODE_power15 = "label"
 
 REMOVERCS = "11"
 
@@ -283,56 +283,56 @@ WARNLO_temp205 = "0"
 CRITHI_temp205 = "83000"
 CRITLO_temp205 = "0"
 
-LABEL_power22 = "total_power"
-WARNHI_power22 = "3050000000"
-WARNLO_power22 = "0"
-CRITHI_power22 = "3100000000"
-CRITLO_power22 = "0"
+LABEL_power0_22_0 = "total_power"
+WARNHI_power0_22_0 = "3050000000"
+WARNLO_power0_22_0 = "0"
+CRITHI_power0_22_0 = "3100000000"
+CRITLO_power0_22_0 = "0"
 
-LABEL_power5 = "p0_power"
-WARNHI_power5 = "250000000"
-WARNLO_power5 = "0"
-CRITHI_power5 = "300000000"
-CRITLO_power5 = "0"
+LABEL_power0_5_2 = "p0_power"
+WARNHI_power0_5_2 = "250000000"
+WARNLO_power0_5_2 = "0"
+CRITHI_power0_5_2 = "300000000"
+CRITLO_power0_5_2 = "0"
 
-LABEL_power6 = "p1_power"
-WARNHI_power6 = "250000000"
-WARNLO_power6 = "0"
-CRITHI_power6 = "300000000"
-CRITLO_power6 = "0"
+LABEL_power0_6_3 = "p1_power"
+WARNHI_power0_6_3 = "250000000"
+WARNLO_power0_6_3 = "0"
+CRITHI_power0_6_3 = "300000000"
+CRITLO_power0_6_3 = "0"
 
-LABEL_power9 = "p0_io_power"
-WARNHI_power9 = "80000000"
-WARNLO_power9 = "0"
-CRITHI_power9 = "100000000"
-CRITLO_power9 = "0"
+LABEL_power0_9_4 = "p0_io_power"
+WARNHI_power0_9_4 = "80000000"
+WARNLO_power0_9_4 = "0"
+CRITHI_power0_9_4 = "100000000"
+CRITLO_power0_9_4 = "0"
 
-LABEL_power10 = "p1_io_power"
-WARNHI_power10 = "80000000"
-WARNLO_power10 = "0"
-CRITHI_power10 = "100000000"
-CRITLO_power10 = "0"
+LABEL_power0_10_5 = "p1_io_power"
+WARNHI_power0_10_5 = "80000000"
+WARNLO_power0_10_5 = "0"
+CRITHI_power0_10_5 = "100000000"
+CRITLO_power0_10_5 = "0"
 
-LABEL_power1 = "p0_mem_power"
-WARNHI_power1 = "250000000"
-WARNLO_power1 = "0"
-CRITHI_power1 = "300000000"
-CRITLO_power1 = "0"
+LABEL_power0_1_6 = "p0_mem_power"
+WARNHI_power0_1_6 = "250000000"
+WARNLO_power0_1_6 = "0"
+CRITHI_power0_1_6 = "300000000"
+CRITLO_power0_1_6 = "0"
 
-LABEL_power2 = "p1_mem_power"
-WARNHI_power2 = "250000000"
-WARNLO_power2 = "0"
-CRITHI_power2 = "300000000"
-CRITLO_power2 = "0"
+LABEL_power0_2_7 = "p1_mem_power"
+WARNHI_power0_2_7 = "250000000"
+WARNLO_power0_2_7 = "0"
+CRITHI_power0_2_7 = "300000000"
+CRITLO_power0_2_7 = "0"
 
-LABEL_power18 = "fan_disk_power"
-WARNHI_power18 = "375000000"
-WARNLO_power18 = "0"
-CRITHI_power18 = "400000000"
-CRITLO_power18 = "0"
+LABEL_power0_18_14 = "fan_disk_power"
+WARNHI_power0_18_14 = "375000000"
+WARNLO_power0_18_14 = "0"
+CRITHI_power0_18_14 = "400000000"
+CRITLO_power0_18_14 = "0"
 
-LABEL_power13 = "io_power"
-WARNHI_power13 = "128000000"
-WARNLO_power13 = "0"
-CRITHI_power13 = "150000000"
-CRITLO_power13 = "0"
+LABEL_power0_13_15 = "io_power"
+WARNHI_power0_13_15 = "128000000"
+WARNLO_power0_13_15 = "0"
+CRITHI_power0_13_15 = "150000000"
+CRITLO_power0_13_15 = "0"
