meta-quanta: set compat for quanta layer
Set the compatible layer for meta-quanta.

(From meta-quanta rev: 6beb6d2b30c46c24d2d0e1f3d255b85adb797f77)

Signed-off-by: Patrick Venture <venture@google.com>
Change-Id: Idfad608e2cef6bdaae6bc0dc2b3c1bcd9cfa3d32
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/conf/layer.conf
+++ b/meta-quanta/conf/layer.conf
@@ -6,3 +6,4 @@ BBFILE_PATTERN_quanta = ""
 
 # Provide a variable that points the base of the quanta layer.
 QUANTABASE = '${@os.path.normpath("${LAYERDIR}/")}'
+LAYERSERIES_COMPAT_quanta-layer = "thud warrior"
