--- a/meta-ibm/meta-witherspoon/conf/machine/swift.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/swift.conf
@@ -6,9 +6,8 @@ KERNEL_DEVICETREE = "${KMACHINE}-bmc-opp-witherspoon.dtb"
 # TODO Update once a Swift MRW is available
 PHOSPHOR_MRW_LICENSE = "Apache-2.0"
 PHOSPHOR_MRW_LIC_FILES_CHKSUM = "file://LICENSE;md5=e3fc50a88d0a364313df4b21ef20c29e"
-PHOSPHOR_MRW_URI = "git://github.com/open-power/witherspoon-xml"
-PHOSPHOR_MRW_REV = "e76c2fc5aeb512a0eb33438c239746de5b629885"
-MRW_XML = "witherspoon.xml"
+PHOSPHOR_MRW_URI = "git://git@github.com/open-power/swift-xml;protocol=ssh"
+PHOSPHOR_MRW_REV = "661fdc993683bd40df4e5f11463ba51da702c55b"
 
 # 128MB flash size
 FLASH_SIZE = "131072"
