meta-quanta: gsj: Modify action of LOCATE LED in led.yaml
Modify action of group LOCATE LED:
- Add fault LED when assert group LOCATE for LED group manager.
- Change Period from 1000 to 250

(From meta-quanta rev: b167f05433580dba7a466fc6f1581bca0a939e79)

Signed-off-by: tony lee <tony.lee@quantatw.com>
Change-Id: I179b7f68fc50e79b1a39ff8a61c77ec54da86801
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-gsj/recipes-phosphor/leds/gsj-led-manager-config/led.yaml
+++ b/meta-quanta/meta-gsj/recipes-phosphor/leds/gsj-led-manager-config/led.yaml
@@ -11,42 +11,74 @@ LED_U2_0_LOCATE:
     LED_U2_0_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_0_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_1_LOCATE:
     LED_U2_1_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_1_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_2_LOCATE:
     LED_U2_2_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_2_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_3_LOCATE:
     LED_U2_3_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_3_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_4_LOCATE:
     LED_U2_4_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_4_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_5_LOCATE:
     LED_U2_5_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_5_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_6_LOCATE:
     LED_U2_6_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_6_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_7_LOCATE:
     LED_U2_7_LOCATE:
         Action: 'Blink'
         DutyOn: 50
-        Period: 1000
+        Period: 250
+    LED_U2_7_FAULT:
+        Action: 'Blink'
+        DutyOn: 50
+        Period: 250
 LED_U2_0_FAULT:
     LED_U2_0_FAULT:
         Action: 'On'
