--- a/meta-quanta/meta-gsj/recipes-phosphor/ipmi/gsj-ipmi-sensor-map/config.yaml
+++ b/meta-quanta/meta-gsj/recipes-phosphor/ipmi/gsj-ipmi-sensor-map/config.yaml
@@ -394,12 +394,12 @@
   entityID: 0x07
   entityInstance: 1
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/0
+  path: /xyz/openbmc_project/sensors/temperature/nvme0
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -411,12 +411,12 @@
   entityID: 0x07
   entityInstance: 2
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/1
+  path: /xyz/openbmc_project/sensors/temperature/nvme1
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -428,12 +428,12 @@
   entityID: 0x07
   entityInstance: 3
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/2
+  path: /xyz/openbmc_project/sensors/temperature/nvme2
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -445,12 +445,12 @@
   entityID: 0x07
   entityInstance: 4
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/3
+  path: /xyz/openbmc_project/sensors/temperature/nvme3
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -462,12 +462,12 @@
   entityID: 0x07
   entityInstance: 5
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/4
+  path: /xyz/openbmc_project/sensors/temperature/nvme4
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -479,12 +479,12 @@
   entityID: 0x07
   entityInstance: 6
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/5
+  path: /xyz/openbmc_project/sensors/temperature/nvme5
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -496,12 +496,12 @@
   entityID: 0x07
   entityInstance: 7
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/6
+  path: /xyz/openbmc_project/sensors/temperature/nvme6
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -513,12 +513,12 @@
   entityID: 0x07
   entityInstance: 8
   sensorType: 0x01
-  path: /xyz/openbmc_project/nvme/7
+  path: /xyz/openbmc_project/sensors/temperature/nvme7
   sensorReadingType: 0x01
   mutability: Mutability::Write|Mutability::Read
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: readingData
-  sensorNamePattern: nameParentLeaf
+  sensorNamePattern: nameLeaf
   unit: xyz.openbmc_project.Sensor.Value.Unit.DegreesC
   interfaces:
     xyz.openbmc_project.Sensor.Value:
@@ -527,11 +527,155 @@
           0xFF:
             type: int64_t
 
+0x40:
+  entityID: 0x07
+  entityInstance: 1
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_0_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
+0x41:
+  entityID: 0x07
+  entityInstance: 2
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_1_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
+0x42:
+  entityID: 0x07
+  entityInstance: 3
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_2_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
+0x43:
+  entityID: 0x07
+  entityInstance: 4
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_3_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
+0x44:
+  entityID: 0x07
+  entityInstance: 5
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_4_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
+0x45:
+  entityID: 0x07
+  entityInstance: 6
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_5_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
+0x46:
+  entityID: 0x07
+  entityInstance: 7
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_6_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
+0x47:
+  entityID: 0x07
+  entityInstance: 8
+  sensorType: 0x21
+  path: /xyz/openbmc_project/led/groups/led_u2_7_locate
+  sensorReadingType: 0x6F
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: assertion
+  sensorNamePattern: nameLeaf
+  interfaces:
+    xyz.openbmc_project.Led.Group:
+      Asserted:
+        Offsets:
+          0x01:
+            type: bool
+            assert: true
+
 0xB0:
   entityID: 0x20
   entityInstance: 1
   sensorType: 0x0C
-  path: /xyz/openbmc_project/memory/BmcECC
+  path: /xyz/openbmc_project/metrics/memory/BmcECC
   sensorReadingType: 0x6F
   serviceInterface: org.freedesktop.DBus.Properties
   readingType: assertion
@@ -550,3 +694,164 @@
           0x05:
             type: string
             assert: xyz.openbmc_project.Memory.MemoryECC.ECCStatus.LogFull
+
+0x62:
+  entityID: 0x0A
+  entityInstance: 7
+  sensorType: 0x02
+  path: /xyz/openbmc_project/sensors/voltage/P3V3_STBY_Vol
+  sensorReadingType: 0x01
+  multiplierM: 156
+  offsetB: 0
+  bExp: 0
+  rExp: -4
+  scale: -3
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  sensorNamePattern: nameLeaf
+  unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
+  interfaces:
+    xyz.openbmc_project.Sensor.Value:
+      Value:
+        Offsets:
+          0xFF:
+            type: int64_t
+
+0x64:
+  entityID: 0x0A
+  entityInstance: 8
+  sensorType: 0x02
+  path: /xyz/openbmc_project/sensors/voltage/P2V5_BMC_Vol
+  sensorReadingType: 0x01
+  multiplierM: 117
+  offsetB: 0
+  bExp: 0
+  rExp: -4
+  scale: -3
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  sensorNamePattern: nameLeaf
+  unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
+  interfaces:
+    xyz.openbmc_project.Sensor.Value:
+      Value:
+        Offsets:
+          0xFF:
+            type: int64_t
+
+0x65:
+  entityID: 0x0A
+  entityInstance: 9
+  sensorType: 0x02
+  path: /xyz/openbmc_project/sensors/voltage/P1V8_BMC_Vol
+  sensorReadingType: 0x01
+  multiplierM: 78
+  offsetB: 0
+  bExp: 0
+  rExp: -4
+  scale: -3
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  sensorNamePattern: nameLeaf
+  unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
+  interfaces:
+    xyz.openbmc_project.Sensor.Value:
+      Value:
+        Offsets:
+          0xFF:
+            type: int64_t
+
+0x66:
+  entityID: 0x0A
+  entityInstance: 10
+  sensorType: 0x02
+  path: /xyz/openbmc_project/sensors/voltage/P1V2_BMC_Vol
+  sensorReadingType: 0x01
+  multiplierM: 78
+  offsetB: 0
+  bExp: 0
+  rExp: -4
+  scale: -3
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  sensorNamePattern: nameLeaf
+  unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
+  interfaces:
+    xyz.openbmc_project.Sensor.Value:
+      Value:
+        Offsets:
+          0xFF:
+            type: int64_t
+
+0x67:
+  entityID: 0x0A
+  entityInstance: 11
+  sensorType: 0x02
+  path: /xyz/openbmc_project/sensors/voltage/PVTT_BMC_Vol
+  sensorReadingType: 0x01
+  multiplierM: 392
+  offsetB: 0
+  bExp: 0
+  rExp: -5
+  scale: -3
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  sensorNamePattern: nameLeaf
+  unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
+  interfaces:
+    xyz.openbmc_project.Sensor.Value:
+      Value:
+        Offsets:
+          0xFF:
+            type: int64_t
+
+0x68:
+  entityID: 0x0A
+  entityInstance: 12
+  sensorType: 0x02
+  path: /xyz/openbmc_project/sensors/voltage/P1V175_BMC_Vol
+  sensorReadingType: 0x01
+  multiplierM: 78
+  offsetB: 0
+  bExp: 0
+  rExp: -4
+  scale: -3
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  sensorNamePattern: nameLeaf
+  unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
+  interfaces:
+    xyz.openbmc_project.Sensor.Value:
+      Value:
+        Offsets:
+          0xFF:
+            type: int64_t
+
+0x69:
+  entityID: 0x0A
+  entityInstance: 13
+  sensorType: 0x02
+  path: /xyz/openbmc_project/sensors/voltage/P3V3_PEVPH_Vol
+  sensorReadingType: 0x01
+  multiplierM: 156
+  offsetB: 0
+  bExp: 0
+  rExp: -4
+  scale: -3
+  mutability: Mutability::Write|Mutability::Read
+  serviceInterface: org.freedesktop.DBus.Properties
+  readingType: readingData
+  sensorNamePattern: nameLeaf
+  unit: xyz.openbmc_project.Sensor.Value.Unit.Volts
+  interfaces:
+    xyz.openbmc_project.Sensor.Value:
+      Value:
+        Offsets:
+          0xFF:
+            type: int64_t
