meta-gsj: quanta-nvme-powerctrl: improve services sequence
For mateched new design, the package will be independent.

1. This package will not depends on nvme.manager.service
   and the log messages directly store on syslog.
2. The nvme_powermanager.service must wait for nvme_gpio.service
   initial complete all GPIO setting.

(From meta-quanta rev: 5a161f129ac473c98b5fd07b4a152e697e02eef7)

Change-Id: I878a3de62dd0009d011122d1b0d3478931eaa852
Signed-off-by: Samuel Jiang <Samuel.Jiang@quantatw.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-gsj/recipes-gsj/quanta-nvme-powerctrl/files/nvme_gpio.service
+++ b/meta-quanta/meta-gsj/recipes-gsj/quanta-nvme-powerctrl/files/nvme_gpio.service
@@ -1,10 +1,13 @@
 [Unit]
 Description = configure GPIO for SSD Power Control
-Wants=org.openbmc.records.events.service
-After=org.openbmc.records.events.service xyz.openbmc_project.nvme.manager.service
+Before=nvme_powermanager.service
 
 [Service]
+Restart=no
+RemainAfterExit=true
+Type=oneshot
 ExecStart=/usr/bin/init_once.sh
+StandardOutput=syslog
 
 [Install]
 WantedBy=multi-user.target
