--- a/meta-quanta/meta-gsj/recipes-gsj/quanta-nvme-powerctrl/files/nvme_powermanager.service
+++ b/meta-quanta/meta-gsj/recipes-gsj/quanta-nvme-powerctrl/files/nvme_powermanager.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=SSD NVME Power Manager
-Wants=org.openbmc.records.events.service
-After=org.openbmc.records.events.service nvme_gpio.service xyz.openbmc_project.nvme.manager.service
+Requires=nvme_gpio.service
+After=nvme_gpio.service
 
 [Service]
 ExecStart=/usr/bin/nvme_powermanager.sh
 Restart=always
-
+StandardOutput=syslog
 
 [Install]
 WantedBy=multi-user.target
