Upload for fan debugging

--- a/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/local.conf.sample
+++ b/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/local.conf.sample
@@ -3,6 +3,7 @@ DISTRO ?= "openbmc-phosphor"
 PACKAGE_CLASSES ?= "package_rpm"
 SANITY_TESTED_DISTROS_append ?= " *"
 EXTRA_IMAGE_FEATURES = "debug-tweaks"
+IMAGE_INSTALL_append = " ipmitool"
 USER_CLASSES ?= "buildstats image-mklibs image-prelink"
 PATCHRESOLVE = "noop"
 BB_DISKMON_DIRS = "\
