--- a/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/machine/evb-ast2500.conf
+++ b/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/machine/evb-ast2500.conf
@@ -7,3 +7,18 @@ FLASH_SIZE = "32768"
 
 require conf/machine/include/ast2500.inc
 require conf/machine/include/obmc-bsp-common.inc
+
+OBMC_MACHINE_FEATURES += "\
+        obmc-phosphor-fan-mgmt \
+        obmc-phosphor-chassis-mgmt \
+        obmc-phosphor-flash-mgmt \
+        obmc-host-ipmi \
+        obmc-chassis-state-mgmt \
+        obmc-bmc-state-mgmt \
+        "
+
+PREFERRED_PROVIDER_virtual/obmc-system-mgmt = "packagegroup-amd-powerctrl"
+PREFERRED_PROVIDER_virtual/obmc-chassis-mgmt = "packagegroup-amd-powerctrl"
+PREFERRED_PROVIDER_virtual/obmc-fan-mgmt = "packagegroup-amd-powerctrl"
+
+VIRTUAL-RUNTIME_skeleton_workbook = "${MACHINE}-config"
