--- a/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/bblayers.conf.sample
+++ b/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/bblayers.conf.sample
@@ -10,10 +10,12 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-poky \
   ##OEROOT##/meta-openembedded/meta-oe \
   ##OEROOT##/meta-openembedded/meta-networking \
+  ##OEROOT##/meta-openembedded/meta-perl \
   ##OEROOT##/meta-openembedded/meta-python \
   ##OEROOT##/meta-openembedded/meta-webserver \
   ##OEROOT##/meta-phosphor \
   ##OEROOT##/meta-aspeed \
+  ##OEROOT##/meta-openpower \
   ##OEROOT##/meta-evb \
   ##OEROOT##/meta-evb/meta-evb-aspeed \
   ##OEROOT##/meta-evb/meta-evb-aspeed/meta-evb-ast2500 \
@@ -23,10 +25,12 @@ BBLAYERS_NON_REMOVABLE ?= " \
   ##OEROOT##/meta-poky \
   ##OEROOT##/meta-openembedded/meta-oe \
   ##OEROOT##/meta-openembedded/meta-networking \
+  ##OEROOT##/meta-openembedded/meta-perl \
   ##OEROOT##/meta-openembedded/meta-python \
   ##OEROOT##/meta-openembedded/meta-webserver \
   ##OEROOT##/meta-phosphor \
   ##OEROOT##/meta-aspeed \
+  ##OEROOT##/meta-openpower \
   ##OEROOT##/meta-evb \
   ##OEROOT##/meta-evb/meta-evb-aspeed \
   ##OEROOT##/meta-evb/meta-evb-aspeed/meta-evb-ast2500 \
