--- a/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/layer.conf
+++ b/meta-evb/meta-evb-aspeed/meta-evb-ast2500/conf/layer.conf
@@ -1,5 +1,9 @@
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
+# We have recipes-* directories, add to BBFILES
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
+
 BBFILE_COLLECTIONS += "evb-ast2500"
 BBFILE_PATTERN_evb-ast2500 = ""
