--- a/meta-ibm/meta-romulus/conf/machine/romulus.conf
+++ b/meta-ibm/meta-romulus/conf/machine/romulus.conf
@@ -20,3 +20,4 @@ PREFERRED_PROVIDER_virtual/phosphor-led-manager-config-native = "romulus-led-man
 PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-read-inventory = "romulus-ipmi-fru-read-inventory-native"
 PREFERRED_PROVIDER_virtual/phosphor-ipmi-inventory-sel = "romulus-ipmi-inventory-sel-native"
 PREFERRED_PROVIDER_virtual/phosphor-logging-callouts = "romulus-phosphor-logging-callouts-native"
+PREFERRED_PROVIDER_virtual/openpower-occ-control-config-native = "romulus-occ-control-config-native"
