--- a/meta-aspeed/conf/layer.conf
+++ b/meta-aspeed/conf/layer.conf
@@ -5,7 +5,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "aspeed-layer"
-BBFILE_PATTERN_aspeed-layer = ""
+BBFILE_PATTERN_aspeed-layer := "^${LAYERDIR}/"
 LAYERVERSION_aspeed-layer = "1"
 LAYERSERIES_COMPAT_aspeed-layer = "thud warrior"
 
