--- a/meta-ibm/meta-witherspoon/recipes-phosphor/gpio/phosphor-gpio-monitor/witherspoon/obmc/gpio/phosphor-power-supply-1.conf
+++ b/meta-ibm/meta-witherspoon/recipes-phosphor/gpio/phosphor-gpio-monitor/witherspoon/obmc/gpio/phosphor-power-supply-1.conf
@@ -3,3 +3,4 @@ DEVPATH=/dev/input/by-path/platform-gpio-keys-event
 KEY=127
 NAME=powersupply1
 DRIVERS=/sys/bus/i2c/drivers/ibm-cffps,3-0068
+EXTRA_IFACES=xyz.openbmc_project.Inventory.Item.PowerSupply
