--- a/meta-quanta/conf/layer.conf
+++ b/meta-quanta/conf/layer.conf
@@ -2,7 +2,7 @@
 BBPATH .= ":${LAYERDIR}"
 
 BBFILE_COLLECTIONS += "quanta"
-BBFILE_PATTERN_quanta = ""
+BBFILE_PATTERN_quanta := "^${LAYERDIR}/"
 
 # Provide a variable that points the base of the quanta layer.
 QUANTABASE = '${@os.path.normpath("${LAYERDIR}/")}'
