witherspoon-128: Add witherspoon MACHINEOVERRIDES
The witherspoon and witherspoon-128 machines are mostly the same.
Add "witherspoon" as a MACHINEOVERRIDES to witherspoon-128 so that
machine-specific features that apply only to witherspoon, including
file paths, can be added to both flavors of witherspoon automatically.

Tested: Built witherspoon and witherspoon-128, flashed images on
        HW and verified witherspoon powered on.

(From meta-ibm rev: 6f44bb26247289aa46c6d21f04617838e596294a)

Change-Id: I18ce6dd799cb0ab52b37f1f1f3d64c6189af4cd8
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/conf/machine/witherspoon-128.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/witherspoon-128.conf
@@ -1,4 +1,5 @@
 require conf/machine/witherspoon.conf
+MACHINEOVERRIDES .= ":witherspoon"
 
 KERNEL_DEVICETREE = "${KMACHINE}-bmc-opp-witherspoon-128.dtb"
 
