--- a/meta-ibm/meta-witherspoon/conf/machine/witherspoon.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/witherspoon.conf
@@ -2,6 +2,7 @@ KMACHINE = "aspeed"
 KERNEL_DEVICETREE = "${KMACHINE}-bmc-opp-${MACHINE}.dtb"
 KERNEL_FEATURES_append = " phosphor-wdt-on-panic"
 
+PHOSPHOR_FAN_CONFIG_USE_NATIVE_SYSROOT = "0"
 UBOOT_MACHINE = "ast_g5_ncsi_config"
 
 OBMC_POWER_SUPPLY_INSTANCES = "0 1"
@@ -23,8 +24,8 @@ VIRTUAL-RUNTIME_phosphor-hwmon-config_df-mrw = ""
 
 # Inhibit phosphor-fan-presence-mrw-native
 PREFERRED_PROVIDER_virtual/phosphor-fan-presence-config_df-mrw = \
-    "phosphor-fan-presence-config-native"
+    "phosphor-fan-presence-config"
 
 # Inhibit phosphor-fan-control-fan-config-mrw-native
 PREFERRED_PROVIDER_virtual/phosphor-fan-control-fan-config_df-mrw = \
-    "phosphor-fan-control-fan-config-native"
+    "phosphor-fan-control-fan-config"
