--- a/meta-inspur/meta-on5263m5/conf/layer.conf
+++ b/meta-inspur/meta-on5263m5/conf/layer.conf
@@ -8,5 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "on5263m5-layer"
 BBFILE_PATTERN_on5263m5-layer = ""
 BBFILE_PRIORITY_on5263m5-layer = "5"
-LAYERSERIES_COMPAT_on5263m5-layer = "sumo"
+LAYERSERIES_COMPAT_on5263m5-layer = "thud warrior"
 
