swift: Increase read-write volume to 32MB
Swift will be using UBI for its filesystem. Since it has 128MB flash
chips, increase the size of the read-write volume to 32MB, same as
witherspoon-128.

(From meta-ibm rev: af07bab16662383dbf01ed4b7fae5083e66ae357)

Change-Id: I631c69791e67f29903ae1e2377fc4414f33a0317
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/conf/machine/swift.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/swift.conf
@@ -11,3 +11,8 @@ PHOSPHOR_MRW_REV = "661fdc993683bd40df4e5f11463ba51da702c55b"
 
 # 128MB flash size
 FLASH_SIZE = "131072"
+
+# 32MB read-write filesystem
+FLASH_UBI_RWFS_SIZE ?= "32768"
+FLASH_UBI_RWFS_TXT_SIZE ?= "32MiB"
+BMC_RW_SIZE = "0x2000000"
