swift.conf: Build an ext4 image
Build an ext4 image for swift to be used in its eMMC chip.

Tested: An ext4 image was built in addition to the current ubi ones.

(From meta-ibm rev: 59bef037b63a73626434bfbfa22e1a53ca7133cd)

Change-Id: I102b821754e2dd4998797f29bb935bd69324e8a3
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/conf/machine/swift.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/swift.conf
@@ -1,5 +1,7 @@
 require conf/machine/witherspoon.conf
 
+IMAGE_FSTYPES += "ext4"
+
 KERNEL_DEVICETREE = "${KMACHINE}-bmc-opp-${MACHINE}.dtb"
 
 PHOSPHOR_MRW_LICENSE = "Apache-2.0"
